@@ -26,7 +26,7 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #include <string.h>
 #include "utils.h"
 #include "rect.h"
-#include "iwin8.h"
+#include "ibuf8.h"
 #include "vgafile.h"
 #include "databuf.h"
 
